# appimage-demo-qt5

./: .gitignore  .gitlab-ci.yml  AppImageBuilder.yml  CMakeLists.txt  README.md
.github/workflows/: appimage.yml  ccpp.yml  puslish.yml
res/: CMakeLists.txt  appimage-demo-qt5.desktop  hello-world-qt.desktop
src/: CMakeLists.txt  Page1Form.ui.qml  Page2Form.ui.qml  main.cpp
